--- a/index.html
+++ b/index.html
@@ -9,16 +9,28 @@
   <div id="main-content">
     <h1>Task Lister Lite™️</h1>
 
-    <form id="create-task-form" action="" method="POST">
+    <form id="create-task-form" action="#" method="POST">
       <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description">
+      <input type="text" id="new-task-description" name="new-task-description" placeholder="description" required>
+      <select id="priority" required>
+        <option value="" selected disabled>Select a Priority Level</option>
+        <option value="high">High</option>
+        <option value="medium">Medium</option>
+        <option value="low">Low</option>
+      </select>
       <input type="submit" value="Create New Task">
     </form>
 
     <div id="list">
       <h2>My Todos:</h2>
-      <ul id="tasks">
-      </ul>
+      <ol id="tasks">
+        <h3>High Priority</h3>
+          <ul id = highPriorityList></ul>
+        <h3>Medium Priority</h3>
+          <ul id = mediumPriorityList></ul>
+        <h3>Low Priority</h3>
+          <ul id = lowPriorityList></ul>
+      </ol>
     </div>
 
     <script src="./src/index.js"></script>
