DONE: Added done list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
           <ul id = lowPriorityList></ul>
       </ol>
     </div>
+    <div id="done">
+      <h2>We did it!</h2>
+      <ul id="tasksCompleted">
+      </ul>
+    </div>
 
     <script src="./src/index.js"></script>
   </div>
