--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </div>
     <div id="done">
       <h2>We did it!</h2>
-      <ul id="tasksCompleted">
-      </ul>
+      <ol id="tasksCompleted">
+      </ol>
     </div>
   </div>
 
