--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <div id="main-content">
-    <h1>Task Lister Lite™️</h1>
+    <h1>Task Lister PRO</h1>
 
     <form id="create-task-form" action="#" method="POST">
-      <label for="new-task-description">Task description:</label>
-      <input type="text" id="new-task-description" name="new-task-description" placeholder="description" required>
+      <label for="new-task-description">Task Description:</label>
+      <input type="text" id="new-task-description" name="new-task-description" placeholder="Description" required>
       <select id="priority" required>
         <option value="" selected disabled>Select a Priority Level</option>
         <option value="high">High</option>
